force-app/main/default/objects/Journey__c/fields/Candidate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email_Address__c</fullName>
    <label>Candidate Email Address</label>
    <type>Email</type>
</CustomField>