force-app/main/default/objects/Journey__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <description>A field in reference to the candidates managers email address.</description>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>