force-app/main/default/objects/Journey__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <description>A field in reference to the candidates manager&apos;s name.</description>
    <label>Manager Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>