force-app/main/default/objects/Journey__c/fields/Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>A field in reference to the candidates onboarding start date.</description>
    <label>Onboarding Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>